<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/first_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" android:layout_marginStart="0dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
            />
            <EditText
                    android:layout_width="274dp"
                    android:layout_height="47dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/atto_in"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/input_warning"/>
            <TextView
                    android:text="@string/second_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="48dp"/>
            <EditText
                    android:layout_width="273dp"
                    android:layout_height="44dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/tot_in"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/input_warning"/>
            <TextView
                    android:text="@string/tgt_att"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tgtatt" android:layout_marginStart="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
            />
            <EditText
                    android:layout_width="276dp"
                    android:layout_height="48dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/tgt_in"
                    android:layout_marginStart="0dp"
                    android:hint="@string/tgtinput_warning"/>
            <Button
                    android:text="@string/button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_marginStart="0dp" android:onClick="secureInit" android:layout_marginTop="32dp"
                    android:layout_marginBottom="15dp"/>
            <TextView
                    android:text="@string/def_txt"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:id="@+id/textOne" android:textAlignment="viewStart" android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:text="@string/def_txt"
                    android:layout_width="match_parent"
                    android:layout_height="92dp" android:id="@+id/textTwo" android:textAlignment="viewStart"
                    android:layout_marginStart="0dp" android:layout_marginTop="15dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
